added a bio description to scrollview's txt view adding padding start/end to linear layout

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,20 +1,30 @@
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:paddingStart="@dimen/padding"
+    android:paddingEnd="@dimen/padding"
     tools:context=".MainActivity">
 
 
     <TextView
 
         android:id="@+id/name_txt"
+        style="@style/NameStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/name"
-        android:textAlignment="center"
-        style="@style/NameStyle" />
+        android:textAlignment="center" />
+
+    <EditText
+        android:id="@+id/editText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="@string/nickname_txt" />
 
     <ScrollView
         android:id="@+id/bio_scroll"
@@ -27,8 +37,8 @@
             style="@style/NameStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="TextView"
-            android:lineSpacingMultiplier="@dimen/line_space"/>
+            android:lineSpacingMultiplier="@dimen/line_space"
+            android:text="@string/bios_txt" />
     </ScrollView>
 
 
