--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,6 @@
     <dimen name="small_padding">8dp</dimen>
     <dimen name="layout_margin">16dp</dimen>
     <dimen name ="line_space">1.2</dimen>
+    <dimen name="padding">16dp</dimen>
+    <dimen name="padding">16dp</dimen>
 </resources>
