--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="Button" />
+        android:text="@string/Done"
+        style="@style/Widget.AppCompat.Button.Colored"
+        />
 
     <ScrollView
         android:id="@+id/bio_scroll"
