--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,23 +18,25 @@
         android:textAlignment="center" />
 
     <EditText
-        android:id="@+id/nickname_txt"
+        android:id="@+id/nickname_edit"
         style="@style/NameStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:ems="10"
         android:hint="@string/what_is_your_nickname"
-        android:inputType="textPersonName" />
+        android:inputType="textPersonName"
+        android:textAlignment="center" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/done_button"
+        style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/layout_margin"
         android:layout_weight="1"
         android:text="@string/Done"
-        style="@style/Widget.AppCompat.Button.Colored"
-        />
+        android:textAlignment="center" />
 
     <ScrollView
         android:id="@+id/bio_scroll"
@@ -48,7 +50,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:lineSpacingMultiplier="@dimen/line_space"
-            android:text="@string/bios_txt" />
+            android:text="@string/bios_txt"
+            android:textAlignment="center" />
     </ScrollView>
 
 
